# openllm-models

./: .gitattributes  .gitignore  README.md  gen_readme.py  readme_md.tpl
.github/: README.md
.github/workflows/: gen_readme.yml  make_bentos.yml
bentoml/bentos/codestral/22b-v0.1-fp16-0121/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-0d5b/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-12d3/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-1802/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-2638/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-33d4/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-3eac/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-4e1f/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-5d1d/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-6bb3/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-7231/: bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-a5f1/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-ad7b/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-b677/: README.md  bento.yaml
bentoml/bentos/codestral/22b-v0.1-fp16-c5de/: bento.yaml
bentoml/bentos/gemma/: latest
bentoml/bentos/llama3/: latest
bentoml/bentos/mixtral/: latest
bentoml/bentos/phi3/: latest
bentoml/bentos/pixtral/: latest
source/: Makefile  make.py  recipe.yaml
source/llamacpp-chat/: bentofile.yaml  requirements.txt  service.py
source/vllm-chat/: bentofile.yaml
src/: Makefile  make.py  make_requirements.txt  recipe.yaml
src/chattts/: bentofile.yaml  openllm_config.yaml  service.py
src/chattts/ui/: package-lock.json  package.json
src/llamacpp-chat/: bentofile.yaml  openllm-config.yaml  openllm_config.yaml  pyproject.toml  service.py
src/templates/: README.md.j2  requirements.txt.j2  service.py.j2
src/vllm-chat/: README.md  bentofile.yaml  openllm-config.yaml  openllm_config.yaml  pyproject.toml  requirements.txt  service.py
tools/: README.md.j2  gen_readme.py
(+6838 files in other folders)
