[project]
name = "openllm-inference-service"
description = "OpenLLM Inference Service"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "BentoML Team", email = "contact@bentoml.com" }]
dependencies = []
version = "0.0.0"
[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"
[tool.bentoml.build]
service = "service.py:LLM"
include = ["LICENCE", "*.py", "*.yaml", "*.txt", "*.md", "ui/*", "*.json"]
